# Defect-Detection

./: .gitignore  AGENTS.md  CLAUDE.md  main.cpp  半导体缺陷检测_DLL设计文档_正式版.docx
Halcon_preprocess/: ROI.hdev  roi_surface_defect_demo.hdev  test.hdev
OK_Detection/: anomalib_train_color.py  anomalib_train_gray.py
dll/: CMakeLists.txt  defect_dll.cpp  defect_dll.h  preprocess_with_roi.cpp
image/17 花面/正面坏品图片/: 47.json
